...
    return () => {
      listener.remove()
    }
  }, [])

  return (
    <PageContent testID="product-list.page">
      <TouchableWithoutFeedback onPress={Keyboard.dismiss}>
        <S.Container>
          <HeaderList />
          <Filters
            orderBy={orderBy}
            search={search}
...
      <S.ButtonAbsolute>
        <Button
          variant="primary-rounded"
          label="Produto"
          icon="plus"
          width="154px"
          testID="product-list.add-product-button"
          onPress={() => navigation.navigate('product-put')}
        />
      </S.ButtonAbsolute>
    </PageContent>
  )
}
...
